@@ -6,6 +6,7 @@ import java.net.URI;
 import java.time.LocalDate;
 import java.time.LocalDateTime;
 import java.time.format.DateTimeFormatter;
+import java.util.ArrayList;
 import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
@@ -32,7 +33,6 @@ import io.swagger.v3.oas.annotations.media.Schema;
 import jakarta.validation.constraints.NotNull;
 import lombok.*;
 import lombok.experimental.SuperBuilder;
-import reactor.core.publisher.Flux;
 import software.amazon.awssdk.services.athena.AthenaClient;
 import software.amazon.awssdk.services.athena.model.*;
 
@@ -158,7 +158,7 @@ public class Query extends AbstractConnection implements RunnableTask<Query.Quer
 
     @Schema(
         title = "Fetch strategy",
-        description = "Default STORE writes all rows to internal storage; FETCH loads all rows into memory; FETCH_ONE returns the first row; NONE submits without waiting."
+        description = "Default STORE writes all rows to internal storage (recommended for large result sets). FETCH loads ALL rows into memory and should only be used for small, bounded result sets. FETCH_ONE returns the first row. NONE submits the query without waiting for results."
     )
     @NotNull
     @Builder.Default
@@ -174,8 +174,8 @@ public class Query extends AbstractConnection implements RunnableTask<Query.Quer
     @PluginProperty(group = "advanced")
     private Property<Boolean> skipHeader = Property.ofValue(true);
 
-    private static DateTimeFormatter dateFormatter = DateTimeFormatter.ofPattern("yyyy-MM-dd");
-    private static DateTimeFormatter timestampFormatter = DateTimeFormatter.ofPattern("yyyy-MM-dd HH:mm:ss.SSSSSS");
+    private static final DateTimeFormatter dateFormatter = DateTimeFormatter.ofPattern("yyyy-MM-dd");
+    private static final DateTimeFormatter timestampFormatter = DateTimeFormatter.ofPattern("yyyy-MM-dd HH:mm:ss.SSSSSS");
 
     @Override
     public QueryOutput run(RunContext runContext) throws Exception {
@@ -231,31 +231,53 @@ public class Query extends AbstractConnection implements RunnableTask<Query.Quer
                 }
             }
 
-            var getQueryResult = GetQueryResultsRequest.builder()
+            var firstRequest = GetQueryResultsRequest.builder()
                 .queryExecutionId(startQueryExecution.queryExecutionId())
                 .build();
-            var getQueryResultsResults = client.getQueryResults(getQueryResult);
-            List<Row> results = getQueryResultsResults.resultSet().rows();
-            if (runContext.render(skipHeader).as(Boolean.class).orElseThrow() && results != null && !results.isEmpty()) {
-                // we skip the first row, this is usually needed as by default Athena returns the header as the first row
-                results = results.subList(1, results.size());
-            }
+            var firstPage = client.getQueryResults(firstRequest);
 
-            if (results != null) {
-                runContext.metric(Counter.of("total.rows", results.size()));
-            }
+            List<ColumnInfo> columnInfo = firstPage.resultSet().resultSetMetadata().columnInfo();
+            boolean rSkipHeader = runContext.render(skipHeader).as(Boolean.class).orElseThrow();
 
-            List<ColumnInfo> columnInfo = getQueryResultsResults.resultSet().resultSetMetadata().columnInfo();
             QueryOutput output = null;
-            if (fetchType == FetchType.FETCH_ONE) {
-                Map<String, Object> row = fetchOne(columnInfo, results);
+            if (fetchType == FetchType.STORE) {
+                // Stream pages to disk to avoid holding the full result set in memory.
+                Pair<URI, Long> pair = storeStreaming(
+                    client, startQueryExecution.queryExecutionId(), columnInfo, firstPage, rSkipHeader, runContext
+                );
+                runContext.metric(Counter.of("total.rows", pair.getRight()));
+                output = QueryOutput.builder().uri(pair.getLeft()).size(pair.getRight()).build();
+            } else if (fetchType == FetchType.FETCH_ONE) {
+                // Only the first page is needed. Skip pagination to avoid unnecessary API calls.
+                var firstRows = new ArrayList<>(firstPage.resultSet().rows());
+                if (rSkipHeader && !firstRows.isEmpty()) {
+                    // we skip the first row, this is usually needed as by default Athena returns the header as the first row
+                    firstRows = new ArrayList<>(firstRows.subList(1, firstRows.size()));
+                }
+                runContext.metric(Counter.of("total.rows", firstRows.size()));
+                Map<String, Object> row = fetchOne(columnInfo, firstRows);
                 output = QueryOutput.builder().row(row).size(row == null ? 0L : 1L).build();
-            } else if (fetchType == FetchType.FETCH) {
+            } else {
+                List<Row> results = new ArrayList<>(firstPage.resultSet().rows());
+                String nextToken = firstPage.nextToken();
+                while (nextToken != null) {
+                    var nextRequest = GetQueryResultsRequest.builder()
+                        .queryExecutionId(startQueryExecution.queryExecutionId())
+                        .nextToken(nextToken)
+                        .build();
+                    var nextPage = client.getQueryResults(nextRequest);
+                    results.addAll(nextPage.resultSet().rows());
+                    nextToken = nextPage.nextToken();
+                }
+
+                if (rSkipHeader && !results.isEmpty()) {
+                    // we skip the first row, this is usually needed as by default Athena returns the header as the first row
+                    results = results.subList(1, results.size());
+                }
+
+                runContext.metric(Counter.of("total.rows", results.size()));
                 List<Object> rows = fetch(columnInfo, results);
                 output = QueryOutput.builder().rows(rows).size((long) rows.size()).build();
-            } else if (fetchType == FetchType.STORE) {
-                Pair<URI, Long> pair = store(columnInfo, results, runContext);
-                output = QueryOutput.builder().uri(pair.getLeft()).size(pair.getRight()).build();
             }
 
             if (output != null) {
@@ -304,7 +326,7 @@ public class Query extends AbstractConnection implements RunnableTask<Query.Quer
             return null;
         }
 
-        Row row = results.get(0);
+        Row row = results.getFirst();
         return map(columnInfo, row);
     }
 
@@ -316,21 +338,52 @@ public class Query extends AbstractConnection implements RunnableTask<Query.Quer
         return results.stream().map(row -> (Object) map(columnInfo, row)).toList();
     }
 
-    private Pair<URI, Long> store(List<ColumnInfo> columnInfo, List<Row> results, RunContext runContext) throws IOException {
-        if (results == null || results.isEmpty()) {
+    private Pair<URI, Long> storeStreaming(
+        AthenaClient client,
+        String queryExecutionId,
+        List<ColumnInfo> columnInfo,
+        GetQueryResultsResponse firstPage,
+        boolean skipHeader,
+        RunContext runContext
+    ) throws IOException {
+        File tempFile = runContext.workingDir().createTempFile(".ion").toFile();
+        long count = 0;
+
+        try (var out = new BufferedOutputStream(new FileOutputStream(tempFile), FileSerde.BUFFER_SIZE)) {
+            var firstRows = firstPage.resultSet().rows();
+            // Athena header row is only on the first page.
+            var dataRows = skipHeader && !firstRows.isEmpty() ? firstRows.subList(1, firstRows.size()) : firstRows;
+            count += writeRows(out, columnInfo, dataRows);
+
+            String nextToken = firstPage.nextToken();
+            while (nextToken != null) {
+                var nextPage = client.getQueryResults(
+                    GetQueryResultsRequest.builder()
+                        .queryExecutionId(queryExecutionId)
+                        .nextToken(nextToken)
+                        .build()
+                );
+                count += writeRows(out, columnInfo, nextPage.resultSet().rows());
+                nextToken = nextPage.nextToken();
+            }
+        }
+
+        if (count == 0) {
             return Pair.of(null, 0L);
         }
+        return Pair.of(runContext.storage().putFile(tempFile), count);
+    }
 
-        File tempFile = runContext.workingDir().createTempFile(".ion").toFile();
-
-        try (var output = new BufferedOutputStream(new FileOutputStream(tempFile), FileSerde.BUFFER_SIZE)) {
-            Long count = FileSerde.writeAll(output, Flux.fromIterable(results).mapNotNull(row -> map(columnInfo, row))).block();
-
-            return Pair.of(
-                runContext.storage().putFile(tempFile),
-                count
-            );
+    private long writeRows(BufferedOutputStream out, List<ColumnInfo> columnInfo, List<Row> rows) throws IOException {
+        long written = 0;
+        for (var row : rows) {
+            var mapped = map(columnInfo, row);
+            if (mapped != null) {
+                FileSerde.write(out, mapped);
+                written++;
+            }
         }
+        return written;
     }
 
     private Map<String, Object> map(List<ColumnInfo> columnInfo, Row row) {
